# RLBind

./: .bash_history  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  install.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: visualize_filter_times.ipynb
notebooks/style/: plot_style.py
scripts/: time_bindcraft_filtering.py
src/bindcraft_utils/: apply_bindcraft_filters.py  filters.py  random_sequence.py
src/data_utils/lppdbb/: __init__.py  artifacts.py  embed_data.py  embeddings_esm.py  embeddings_hf.py  records.py  splits.py
src/data_utils/lppdbb/rdkit/: clustering.py  distances.py  preprocessing.py
src/general_utils/: download_data.py  timer.py
src/generator/embedding_baseline1/: generate_boltz_yaml.py  retrieve_nearest_train_binders.py
src/plots/: plot_lppdbb_clusters.py  plot_lppdbb_nn_similarity.py  plot_lppdbb_split_tanimoto.py  plot_lppdbb_umap.py  plot_lppdbb_umap_split.py
src/plots/embedding_figure_pack/: plot_embedding_tanimoto_precision.py
src/plots/ood_figure_pack/: __init__.py  plot_ecdf_nn_similarity.py  plot_knn_label_mixing.py  plot_nn_heatmap.py  plot_property_shift.py  plot_scaffold_shift.py  plot_similarity_kde.py  plot_umap_variants.py  run_all.py  utils.py
src/plots/ood_figure_pack_v2/: __init__.py  plot_binder_length_distribution.py  plot_binding_affinity_vs_mw.py  plot_ligand_mw_distribution.py  plot_ligand_mw_distribution_split.py  plot_ligands_per_target.py
src/schemas/bindcraft/: settings.py
src/scripts/: embed_lppdbb_all.py  time_bindcraft_filtering.py
